--- a/src/App.scss
+++ b/src/App.scss
@@ -28,47 +28,21 @@
                     align-items: center;
                 }
             }
+
+            .login-btn {
+                padding: 0 25px;
+                cursor: pointer;
+            }
         }
     }
 
     .body {
         display: flex;
-        justify-content: center;
-        align-items: flex-start;
         flex-direction: column;
-
-        .search-field {
-            padding: 10px;
-
-            .search-input {}
-
-            .search-button {}
-        }
-
-        .res-container {
-            display: flex;
-            justify-content: flex-start;
-            align-items: flex-start;
-            padding: 10px;
-            flex-wrap: wrap;
-
-            .res-card {
-                cursor: pointer;
-                padding: 5px;
-                /* Add shadows to create the "card" effect */
-                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-                transition: 0.3s;
-
-                &:hover {
-                    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-                }
-
-                .res-image {
-                    height: 200px;
-                    width: 200px;
-                }
-            }
-        }
-
+        width: 100%;
+        justify-content: space-between;
+        padding: 10px 15px 10px 15px;
     }
+
+
 }
