--- a/src/components/RestaurantCard.scss
+++ b/src/components/RestaurantCard.scss
@@ -2,11 +2,11 @@
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
       monospace;
   }
-  
-  .nft{
-    user-select:none;
+
+  .nft {
+    user-select: none;
     max-width: 300px;
-    margin: 5rem auto;
+    margin: 5rem 1rem auto;
     border: 1px solid #ffffff22;
     box-shadow: 0 7px 20px 5px #00000088;
     border-radius: .7rem;
@@ -14,65 +14,78 @@
     -webkit-backdrop-filter: blur(7px);
     overflow: hidden;
     transition: .5s all;
-    hr{
+
+    hr {
       width: 100%;
       border: none;
       border-bottom: 1px solid #88888855;
       margin-top: 0;
     }
-    ins{
+
+    ins {
       text-decoration: none;
     }
-    .main{
+
+    .main {
       display: flex;
       flex-direction: column;
       width: 90%;
       padding: 1rem;
-      .tokenImage{
+
+      .tokenImage {
         border-radius: .5rem;
         max-width: 100%;
         height: 250px;
         object-fit: cover;
       }
-      .description{
+
+      .description {
         margin: .5rem 0;
         color: #a89ec9;
       }
-      .tokenInfo{
+
+      .tokenInfo {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        .price{
+
+        .price {
           display: flex;
           align-items: center;
           color: red;
           font-weight: 700;
-          ins{
+
+          ins {
             margin-left: -.3rem;
             margin-right: .5rem;
           }
         }
-        .duration{
+
+        .duration {
           display: flex;
           align-items: center;
           color: #a89ec9;
           margin-right: .2rem;
-          ins{
+
+          ins {
             margin: .5rem;
             margin-bottom: .4rem;
           }
         }
       }
-      .creator{
+
+      .creator {
         display: flex;
         align-items: center;
         margin-top: .2rem;
         margin-bottom: -.3rem;
-        ins{
+
+        ins {
           color: #a89ec9;
           text-decoration: none;
         }
-        .wrapper{
+
+        .wrapper {
           display: flex;
           align-items: center;
           border: 1px solid #ffffff22;
@@ -81,7 +94,8 @@
           margin-right: .5rem;
           border-radius: 100%;
           box-shadow: inset 0 0 0 4px #000000aa;
-          img{
+
+          img {
             border-radius: 100%;
             border: 1px solid #ffffff22;
             width: 2rem;
@@ -92,7 +106,8 @@
         }
       }
     }
-    ::before{
+
+    ::before {
       position: fixed;
       content: "";
       box-shadow: 0 0 100px 40px #ffffff08;
@@ -102,25 +117,28 @@
       height: 60rem;
       transition: .7s all;
     }
-    &:hover{
+
+    &:hover {
       border: 1px solid #ffffff44;
       box-shadow: 0 7px 50px 10px #000000aa;
       transform: scale(1.015);
       filter: brightness(1.3);
-      ::before{
+
+      ::before {
         filter: brightness(.5);
         top: -100%;
         left: 200%;
       }
     }
   }
-  
-  .bg{
+
+  .bg {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    h1{
+
+    h1 {
       font-size: 20rem;
       filter: opacity(0.5);
     }
