--- a/src/components/RestaurantCard.scss
+++ b/src/components/RestaurantCard.scss
@@ -143,3 +143,8 @@
       filter: opacity(0.5);
     }
   }
+
+  a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+}
