--- a/src/components/RestaurantCard.scss
+++ b/src/components/RestaurantCard.scss
@@ -42,6 +42,8 @@
       .description {
         margin: .5rem 0;
         color: #a89ec9;
+        height: 50px;
+        text-overflow: ellipsis;
       }
 
       .tokenInfo {
@@ -144,7 +146,22 @@
     }
   }
 
-  a, a:hover, a:focus, a:active {
+  a,
+  a:hover,
+  a:focus,
+  a:active {
     text-decoration: none;
     color: inherit;
-}
+  }
+
+  .highest-rated {
+    position: absolute;
+    margin-top: 0px;
+    margin-left: 15px;
+    background-color: goldenrod;
+    font-size: 18px;
+    border-radius: 5px;
+    padding: 10px;
+    color: white;
+    z-index: 1;
+  }
